# os-query-builder-rs

./: .gitignore  Cargo.toml  License  Readme.md  readme.md
src/: lib.rs
src/compound_query/: bool.rs  boosting.rs  compound_query_item.rs  constant_score.rs  disjunction_max.rs  mod.rs
src/compound_query/boolean/: bool.rs  compound_query_boolean.rs  mod.rs
src/full_text/: match.rs  match_boolean_prefix.rs  match_phrase.rs  match_phrase_prefix.rs  mod.rs  multi_match.rs  query_string.rs  simple_query_string.rs  terms.rs
src/full_text/intervals/: interval.rs  interval_rule.rs  mod.rs
src/full_text/intervals/rules/: all_of.rs  any_of.rs  filter.rs  fuzzy.rs  match.rs  (+3 more)
src/misc/: fuzziness.rs  mod.rs  operator.rs  query_field.rs  regexp_flag.rs  relation.rs  rewrite.rs  script.rs  type.rs  zero_terms_query.rs
src/query/: aggs.rs  match.rs  mod.rs  multi_match.rs  query_field.rs
src/term/: exists.rs  fuzzy.rs  ids.rs  mod.rs  prefix.rs  range.rs  regexp.rs  term.rs  term_type.rs  terms.rs  terms_set.rs  wildcard.rs
tests/: compound_query_boolean_test.rs  compound_query_boosting_test.rs  compound_query_constant_score.rs  compound_query_disjunction_max_test.rs  exists_test.rs  fuzzy_test.rs  ids_test.rs  intervals_rule_test.rs  intervals_test.rs  lib_test.rs  match_boolean_prefix_test.rs  match_phrase_prefix_test.rs  match_phrase_test.rs  match_test.rs  mod.rs  multi_match_test.rs  prefix_test.rs  query_string_test.rs  range_test.rs  regexp_test.rs  rewrite_test.rs  simple_query_string_test.rs  term_test.rs  terms_set_test.rs  terms_test.rs  wildcard_test.rs
