[package]
name = "os-query-builder-rs"
version = "0.1.8"
edition = "2021"
description = "Open Search query builder"
license = "MIT"
repository = "https://github.com/ibatanov/os-query-builder-rs/tree/main"
authors = ["Igor Batanov <irbatanov@ya.ru>"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.107"